--- a/Avalon/Avalon.Storage/Avalon.Storage.csproj
+++ b/Avalon/Avalon.Storage/Avalon.Storage.csproj
@@ -10,6 +10,7 @@
         <ProjectReference Include="../Avalon.List/Avalon.List.csproj" />
         <ProjectReference Include="../Avalon.Text/Avalon.Text.csproj" />
         <ProjectReference Include="../Avalon.Stream/Avalon.Stream.csproj" />
+        <ProjectReference Include="../Avalon.Time/Avalon.Time.csproj" />
     </ItemGroup>
 
 </Project>
