--- a/Tool/Z.Tool.Saber.OperateKindList/Z.Tool.Saber.OperateKindList.csproj
+++ b/Tool/Z.Tool.Saber.OperateKindList/Z.Tool.Saber.OperateKindList.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="../../../Class/Tool/Z.Infra.ListSourceGen/Z.Infra.ListSourceGen.csproj" />
+        <ProjectReference Include="../Z.Infra.ListSourceGen/Z.Infra.ListSourceGen.csproj" />
     </ItemGroup>
 
     <ItemGroup>
