--- a/Tool/Z.Make.Saber/Z.Make.Saber.csproj
+++ b/Tool/Z.Make.Saber/Z.Make.Saber.csproj
@@ -7,11 +7,12 @@
 
     <ItemGroup>
         <ProjectReference Include="../Z.Tool.Saber.CountList/Z.Tool.Saber.CountList.csproj" />
-        <ProjectReference Include="../Z.Tool.Saber.LimitList/Z.Tool.Saber.LimitList.csproj" />
-        <ProjectReference Include="../Z.Tool.Saber.IndexList/Z.Tool.Saber.IndexList.csproj" />
         <ProjectReference Include="../Z.Tool.Saber.ErrorKindList/Z.Tool.Saber.ErrorKindList.csproj" />
-        <ProjectReference Include="../Z.Tool.Saber.TaskKindList/Z.Tool.Saber.TaskKindList.csproj" />
+        <ProjectReference Include="../Z.Tool.Saber.IndexList/Z.Tool.Saber.IndexList.csproj" />
+        <ProjectReference Include="../Z.Tool.Saber.LimitList/Z.Tool.Saber.LimitList.csproj" />
+        <ProjectReference Include="../Z.Tool.Saber.NodeList/Z.Tool.Saber.NodeList.csproj" />
         <ProjectReference Include="../Z.Tool.Saber.OperateKindList/Z.Tool.Saber.OperateKindList.csproj" />
+        <ProjectReference Include="../Z.Tool.Saber.TaskKindList/Z.Tool.Saber.TaskKindList.csproj" />
     </ItemGroup>
 
 </Project>
